# MAX-AI

./: .gitignore  LICENSE  README.md  extract_prompt.py  install.ps1  install.sh  max-ai  max-ai.bat  max-ai.cmd  max-ai.yaml  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py
config/: .env.example
max_ai/: __init__.py  _constants.py  cli.py  constants.py  tray.py
max_ai/commands/: cache.py  history.py  run.py  status.py
max_ai/core/: __init__.py  agent.py  config.py  logging_config.py
max_ai/models/: response.py
max_ai/tests/: test_agent.py
max_ai/utils/: __init__.py  cache.py  history.py
project/: README.md  pip_install_output.txt  pyproject.toml  requirements.txt  setup.py
src/data/: databaze.db
src/max_ai/: cli.py  constants.py
src/max_ai/commands/: __init__.py  cache.py  history.py  interactive.py  run.py  status.py
src/max_ai/core/: agent.py  config.py  handlers.py  rich_click.py
src/max_ai/models/: __init__.py  response.py
src/max_ai/utils/: cache.py  conversation_history.py  history.py
src/tests/: test_agent.py  test_cli.py  test_run.py
tests/: test_agent.py  test_cli.py
