[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "max-ai"
version = "0.1.0"
description = "A console AI agent using Cohere and Mistral"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your@example.com"}
]
keywords = ["ai", "cli", "cohere", "mistral"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "python-dotenv",
    "click>=8.0",
    "cohere>=5.0",
    "mistralai>=1.0",
    "beautifulsoup4",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "youtube-transcript-api>=0.6.0",
    "colorama",
    "aiohttp",
    "rich>=13.0",
]

[project.scripts]
max-ai = "max_ai.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true