[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "max-ai"
version = "0.1.0"
description = "CLI assistant for summarizing web content, documents, and YouTube using AI models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "MAX AI" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
keywords = ["AI", "CLI", "summarization", "YouTube", "web scraping", "document parsing"]

dependencies = [
  "requests",
  "python-dotenv",
  "click",
  "cohere",
  "mistralai",
  "beautifulsoup4",
  "rich",
  "aiohttp",
  "PyPDF2>=3.0.0",
  "python-docx>=0.8.11",
  "python-pptx>=0.6.23",
  "openpyxl>=3.1.0",
  "xlrd>=1.2.0",
  "youtube-transcript-api>=0.6.0",
  "yt-dlp",
  "PyYAML"
]

[project.scripts]
max-ai = "max_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "../src"}

[tool.setuptools.packages.find]
where = ["../src"]
include = ["max_ai", "max_ai.*"]
